--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -1,75 +1,141 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dlib\n",
-    "import cv2\n",
-    "import os\n",
-    "import re\n",
-    "import json\n",
-    "from pylab import *\n",
-    "from PIL import Image, ImageChops, ImageEnhance"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    },
+    "colab": {
+      "name": "capture_img.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_frame_folder = 'train_sample_videos'\n",
-    "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
-    "    data = json.load(file)\n",
-    "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
-    "detector = dlib.get_frontal_face_detector()\n",
-    "for vid in list_of_train_data:\n",
-    "    count = 0\n",
-    "    cap = cv2.VideoCapture(os.path.join(train_frame_folder, vid))\n",
-    "    frameRate = cap.get(5)\n",
-    "    while cap.isOpened():\n",
-    "        frameId = cap.get(1)\n",
-    "        ret, frame = cap.read()\n",
-    "        if ret != True:\n",
-    "            break\n",
-    "        if frameId % ((int(frameRate)+1)*1) == 0:\n",
-    "            face_rects, scores, idx = detector.run(frame, 0)\n",
-    "            for i, d in enumerate(face_rects):\n",
-    "                x1 = d.left()\n",
-    "                y1 = d.top()\n",
-    "                x2 = d.right()\n",
-    "                y2 = d.bottom()\n",
-    "                crop_img = frame[y1:y2, x1:x2]\n",
-    "                if data[vid]['label'] == 'REAL':\n",
-    "                    cv2.imwrite('dataset/real/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
-    "                elif data[vid]['label'] == 'FAKE':\n",
-    "                    cv2.imwrite('dataset/fake/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
-    "                count+=1"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/itssanat/Deepfake-Detection/blob/main/capture_img.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oMa-0X9Z-aw_",
+        "outputId": "abc89bf9-f39b-4692-b1a2-5e4636aa0e95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L1PcrbAO-9Yg",
+        "outputId": "690c9f15-0a07-4e1d-f2aa-ffc196567b38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pwd"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E1aGAEs1-Q9V"
+      },
+      "source": [
+        "import dlib\n",
+        "import cv2\n",
+        "import os\n",
+        "import re\n",
+        "import json\n",
+        "from pylab import *\n",
+        "from PIL import Image, ImageChops, ImageEnhance"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QdVd9mRF-Q9m"
+      },
+      "source": [
+        "train_frame_folder = 'train_sample_videos'\n",
+        "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
+        "detector = dlib.get_frontal_face_detector()\n",
+        "for vid in list_of_train_data:\n",
+        "    count = 0\n",
+        "    cap = cv2.VideoCapture(os.path.join(train_frame_folder, vid))\n",
+        "    frameRate = cap.get(5)\n",
+        "    while cap.isOpened():\n",
+        "        frameId = cap.get(1)\n",
+        "        ret, frame = cap.read()\n",
+        "        if ret != True:\n",
+        "            break\n",
+        "        if frameId % ((int(frameRate)+1)*1) == 0:\n",
+        "            face_rects, scores, idx = detector.run(frame, 0)\n",
+        "            for i, d in enumerate(face_rects):\n",
+        "                x1 = d.left()\n",
+        "                y1 = d.top()\n",
+        "                x2 = d.right()\n",
+        "                y2 = d.bottom()\n",
+        "                crop_img = frame[y1:y2, x1:x2]\n",
+        "                if data[vid]['label'] == 'REAL':\n",
+        "                    cv2.imwrite('dataset/real/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
+        "                elif data[vid]['label'] == 'FAKE':\n",
+        "                    cv2.imwrite('dataset/fake/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
+        "                count+=1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
