--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -23,7 +23,8 @@
       "name": "capture_img.ipynb",
       "provenance": [],
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,49 +40,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oMa-0X9Z-aw_",
-        "outputId": "abc89bf9-f39b-4692-b1a2-5e4636aa0e95",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "oMa-0X9Z-aw_"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L1PcrbAO-9Yg",
-        "outputId": "690c9f15-0a07-4e1d-f2aa-ffc196567b38",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "L1PcrbAO-9Yg"
       },
       "source": [
+        "%cd drive/MyDrive/Deepfake-Detection/\n",
         "!pwd"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "msiqVBARcXG2"
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -97,7 +86,35 @@
         "from pylab import *\n",
         "from PIL import Image, ImageChops, ImageEnhance"
       ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dH89VnHxvK4z"
+      },
+      "source": [
+        "train_frame_folder = 'train_sample_videos'\n",
+        "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "print(data)\n",
+        "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
+        "detector = dlib.get_frontal_face_detector()\n",
+        "print(len(list_of_train_data))"
+      ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UOiuvUrKxieZ"
+      },
+      "source": [
+        "from google.colab.patches import cv2_imshow"
+      ],
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -106,15 +123,12 @@
         "id": "QdVd9mRF-Q9m"
       },
       "source": [
-        "train_frame_folder = 'train_sample_videos'\n",
-        "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
-        "    data = json.load(file)\n",
-        "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
-        "detector = dlib.get_frontal_face_detector()\n",
+        "cnt =0\n",
         "for vid in list_of_train_data:\n",
         "    count = 0\n",
         "    cap = cv2.VideoCapture(os.path.join(train_frame_folder, vid))\n",
         "    frameRate = cap.get(5)\n",
+        "    print(vid);\n",
         "    while cap.isOpened():\n",
         "        frameId = cap.get(1)\n",
         "        ret, frame = cap.read()\n",
@@ -132,7 +146,11 @@
         "                    cv2.imwrite('dataset/real/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
         "                elif data[vid]['label'] == 'FAKE':\n",
         "                    cv2.imwrite('dataset/fake/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
-        "                count+=1"
+        "                count+=1\n",
+        "    cnt += count\n",
+        "    print(count)\n",
+        "\n",
+        "print(cnt)            \n"
       ],
       "execution_count": null,
       "outputs": []
