--- a/model_play.ipynb
+++ b/model_play.ipynb
@@ -1,123 +1,247 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "import dlib\n",
-    "import cv2\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from PIL import Image, ImageChops, ImageEnhance\n",
-    "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.preprocessing.image import img_to_array, load_img"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python [conda env:root] *",
+      "language": "python",
+      "name": "conda-root-py"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    },
+    "colab": {
+      "name": "model_play.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "data": {
-      "text/plain": [
-       "'2.0.0'"
+      "cell_type": "code",
+      "metadata": {
+        "id": "27kDrbf_t_SS",
+        "outputId": "a1584365-c994-4531-c78b-04cff7b6967c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
       ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = load_model('deepfake-detection-model.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n",
-      "[1]\n"
-     ]
+      "cell_type": "code",
+      "metadata": {
+        "id": "xdIG6VpnuI6C",
+        "outputId": "6590ca47-3b7a-41f1-aa7f-8ede6e9c743c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%cd drive/MyDrive/Deepfake-Detection/\n",
+        "!ls"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive/Deepfake-Detection\n",
+            "dataset  deepfake-detection-model.h5  train_sample_videos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ynq3OcCt5oT"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import dlib\n",
+        "import cv2\n",
+        "import os\n",
+        "import numpy as np\n",
+        "from PIL import Image, ImageChops, ImageEnhance\n",
+        "from tensorflow.keras.models import load_model\n",
+        "from tensorflow.keras.preprocessing.image import img_to_array, load_img"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZSHSMbQlt5ou",
+        "outputId": "ee7b74ec-56d2-49b8-ec39-50a29d894d68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "tf.__version__"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'2.4.1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o1GuCtgmt5oz"
+      },
+      "source": [
+        "model = load_model('deepfake-detection-model.h5')"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TR9baTvCu5gO",
+        "outputId": "60b1bebe-2d3b-464f-a73b-ac3a2a142be0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# just for analysis \n",
+        "import json\n",
+        "train_frame_folder = 'train_sample_videos'\n",
+        "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
+        "\n",
+        "real = 0\n",
+        "fake = 0\n",
+        "for vid in list_of_train_data:\n",
+        "    if data[vid]['label'] == 'REAL':\n",
+        "        real = real + 1\n",
+        "    else :\n",
+        "        fake = fake + 1\n",
+        "print(fake, real)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "323 77\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "In6LQNdSt5o1",
+        "outputId": "dc00abb9-2f84-4dd5-b15c-2e2b26265ef7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "input_shape = (128, 128, 3)\n",
+        "pr_data = []\n",
+        "detector = dlib.get_frontal_face_detector()\n",
+        "cap = cv2.VideoCapture('test_videos/jzmzdispyo.mp4')\n",
+        "frameRate = cap.get(5)\n",
+        "while cap.isOpened():\n",
+        "    frameId = cap.get(1)\n",
+        "    ret, frame = cap.read()\n",
+        "    if ret != True:\n",
+        "        break\n",
+        "    if frameId % ((int(frameRate)+1)*1) == 0:\n",
+        "        face_rects, scores, idx = detector.run(frame, 0)\n",
+        "        for i, d in enumerate(face_rects):\n",
+        "            x1 = d.left()\n",
+        "            y1 = d.top()\n",
+        "            x2 = d.right()\n",
+        "            y2 = d.bottom()\n",
+        "            crop_img = frame[y1:y2, x1:x2]\n",
+        "            data = img_to_array(cv2.resize(crop_img, (128, 128))).flatten() / 255.0\n",
+        "            data = data.reshape(-1, 128, 128, 3)\n",
+        "            print(model.predict_classes(data))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py:450: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
+            "  warnings.warn('`model.predict_classes()` is deprecated and '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[0]\n",
+            "[1]\n",
+            "[1]\n",
+            "[0]\n",
+            "[0]\n",
+            "[0]\n",
+            "[0]\n",
+            "[0]\n",
+            "[0]\n",
+            "[0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LC4nN1U_t5o3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "input_shape = (128, 128, 3)\n",
-    "pr_data = []\n",
-    "detector = dlib.get_frontal_face_detector()\n",
-    "cap = cv2.VideoCapture('test_videos/jzmzdispyo.mp4')\n",
-    "frameRate = cap.get(5)\n",
-    "while cap.isOpened():\n",
-    "    frameId = cap.get(1)\n",
-    "    ret, frame = cap.read()\n",
-    "    if ret != True:\n",
-    "        break\n",
-    "    if frameId % ((int(frameRate)+1)*1) == 0:\n",
-    "        face_rects, scores, idx = detector.run(frame, 0)\n",
-    "        for i, d in enumerate(face_rects):\n",
-    "            x1 = d.left()\n",
-    "            y1 = d.top()\n",
-    "            x2 = d.right()\n",
-    "            y2 = d.bottom()\n",
-    "            crop_img = frame[y1:y2, x1:x2]\n",
-    "            data = img_to_array(cv2.resize(crop_img, (128, 128))).flatten() / 255.0\n",
-    "            data = data.reshape(-1, 128, 128, 3)\n",
-    "            print(model.predict_classes(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python [conda env:root] *",
-   "language": "python",
-   "name": "conda-root-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  ]
 }
