--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -3,9 +3,13 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3.6.12 64-bit ('dfd': conda)",
+      "metadata": {
+        "interpreter": {
+          "hash": "363e214a3c0159605df0fe0b534f89f44fb9653db0b43fce25af7d99d1f07e69"
+        }
+      }
     },
     "language_info": {
       "codemirror_mode": {
@@ -17,7 +21,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.6.12-final"
     },
     "colab": {
       "name": "capture_img.ipynb",
