--- a/model_play.ipynb
+++ b/model_play.ipynb
@@ -3,9 +3,13 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python [conda env:root] *",
-      "language": "python",
-      "name": "conda-root-py"
+      "name": "python3",
+      "display_name": "Python 3.6.12 64-bit ('dfd': conda)",
+      "metadata": {
+        "interpreter": {
+          "hash": "363e214a3c0159605df0fe0b534f89f44fb9653db0b43fce25af7d99d1f07e69"
+        }
+      }
     },
     "language_info": {
       "codemirror_mode": {
@@ -17,7 +21,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.6.12-final"
     },
     "colab": {
       "name": "model_play.ipynb",
@@ -35,8 +39,8 @@
         }
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "execution_count": 1,
       "outputs": [
@@ -59,8 +63,8 @@
         }
       },
       "source": [
-        "%cd drive/MyDrive/Deepfake-Detection/\n",
-        "!ls"
+        "# %cd drive/MyDrive/Deepfake-Detection/\n",
+        "# !ls"
       ],
       "execution_count": 2,
       "outputs": [
@@ -76,20 +80,37 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/itssanat/Downloads\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd Downloads/"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "2ynq3OcCt5oT"
       },
       "source": [
         "import tensorflow as tf\n",
-        "import dlib\n",
         "import cv2\n",
         "import os\n",
         "import numpy as np\n",
         "from PIL import Image, ImageChops, ImageEnhance\n",
         "from tensorflow.keras.models import load_model\n",
-        "from tensorflow.keras.preprocessing.image import img_to_array, load_img"
+        "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
+        "import dlib"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -132,7 +153,7 @@
       "source": [
         "model = load_model('deepfake-detection-model.h5')"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -174,6 +195,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/itssanat/Downloads/deepfake-detection-challenge\nsample_submission.csv  test_videos\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd deepfake-detection-challenge/\n",
+        "!ls"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "In6LQNdSt5o1",
         "outputId": "dc00abb9-2f84-4dd5-b15c-2e2b26265ef7",
@@ -185,7 +224,7 @@
         "input_shape = (128, 128, 3)\n",
         "pr_data = []\n",
         "detector = dlib.get_frontal_face_detector()\n",
-        "cap = cv2.VideoCapture('test_videos/jzmzdispyo.mp4')\n",
+        "cap = cv2.VideoCapture('aagfhgtpmv.mp4')\n",
         "frameRate = cap.get(5)\n",
         "while cap.isOpened():\n",
         "    frameId = cap.get(1)\n",
@@ -204,22 +243,15 @@
         "            data = data.reshape(-1, 128, 128, 3)\n",
         "            print(model.predict_classes(data))"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py:450: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
-            "  warnings.warn('`model.predict_classes()` is deprecated and '\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[0]\n",
-            "[1]\n",
-            "[1]\n",
+            "[0]\n",
+            "[0]\n",
             "[0]\n",
             "[0]\n",
             "[0]\n",
@@ -227,8 +259,7 @@
             "[0]\n",
             "[0]\n",
             "[0]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -237,9 +268,7 @@
       "metadata": {
         "id": "LC4nN1U_t5o3"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
