adding prediction interface

--- a/model_play.ipynb
+++ b/model_play.ipynb
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -110,7 +110,7 @@
         "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
         "import dlib"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -153,19 +153,20 @@
       "source": [
         "model = load_model('deepfake-detection-model.h5')"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/home/itssanat/Downloads/deepfake-detection-challenge\nsample_submission.csv  test_videos\n"
+            "/home/itssanat/Downloads/deepfake-detection-challenge\n",
+            "aagfhgtpmv.mp4\tsample_submission.csv  test_videos\n"
           ]
         }
       ],
@@ -204,24 +205,29 @@
         "            crop_img = frame[y1:y2, x1:x2]\n",
         "            data = img_to_array(cv2.resize(crop_img, (128, 128))).flatten() / 255.0\n",
         "            data = data.reshape(-1, 128, 128, 3)\n",
-        "            print(model.predict_classes(data))"
+        "            pred = model.predict_classes(data)\n",
+        "            # print(np.squeeze(pre))\n",
+        "            if np.sum(pred) == 0:\n",
+        "                print(0)\n",
+        "            else :\n",
+        "                print(1)"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n",
-            "[0]\n"
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n"
           ]
         }
       ]
