adding some helper code

--- a/helpers/dataset_analysis.ipynb
+++ b/helpers/dataset_analysis.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12-final"
+   "version": "3.6.12"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -28,25 +28,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/home/itssanat/Desktop/dfdc_dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ~/Desktop/dfdc_dataset/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "dfdc_train_part_48  global_metadata.json  metadata.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset analysis \n",
     "import json\n",
-    "train_frame_folder = 'train_sample_videos'\n",
-    "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "997\n498 499\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dataset analysis \n",
+    "train_frame_folder = 'dfdc_train_part_48'\n",
+    "with open('global_metadata.json', 'r') as file:\n",
     "    data = json.load(file)\n",
     "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
     "\n",
     "real = 0\n",
     "fake = 0\n",
+    "print(len(list_of_train_data))\n",
     "for vid in list_of_train_data:\n",
     "    if data[vid]['label'] == 'REAL':\n",
     "        real = real + 1\n",
     "    else :\n",
     "        fake = fake + 1\n",
     "print(fake, real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1866 1865\n"
+     ]
+    }
+   ],
+   "source": [
+    "# balance dataset\n",
+    "num = fake - real\n",
+    "count = 0\n",
+    "for vid in list_of_train_data:\n",
+    "    if data[vid]['label'] == 'FAKE' and count < num:\n",
+    "        os.remove(os.path.join( train_frame_folder, vid))\n",
+    "        count = count+1\n",
+    "print(count, num)"
    ]
   }
  ]
