--- a/helpers/dataset_analysis.ipynb
+++ b/helpers/dataset_analysis.ipynb
@@ -73,21 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1699\n1591 108\n"
+      "1214\n607 607\n"
      ]
     }
    ],
    "source": [
     "# dataset analysis \n",
-    "train_frame_folder = 'dfdc_train_part_1'\n",
-    "with open( os.path.join( train_frame_folder,'metadata.json'), 'r') as file:\n",
+    "train_frame_folder = 'dfdc_train_data'\n",
+    "with open( 'global_metadata.json', 'r') as file:\n",
     "    data = json.load(file)\n",
     "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
     "\n",
@@ -104,22 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'train_mp4'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove audio altered video\n",
     "audio_altered = []\n",
@@ -127,19 +116,23 @@
     "    csv_reader = csv.reader(csv_file , delimiter=',')\n",
     "    for lines in csv_reader:\n",
     "        audio_altered.append(lines[0])\n",
-    "audio_altered.pop(0)"
+    "audio_altered.pop(0)\n",
+    "\n",
+    "for vid in list_of_train_data:\n",
+    "    if vid in audio_altered:\n",
+    "        os.remove(os.path.join(train_frame_folder , vid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1866 1865\n"
+      "878 878\n"
      ]
     }
    ],
