--- a/helpers/merge_json.ipynb
+++ b/helpers/merge_json.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "dfdc_train_part_48  metadata.json\n"
+      "dfdc_train_data    global_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_1  info.txt\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "with open(os.path.join('dfdc_train_part_48', 'metadata.json'), 'r') as file:\n",
+    "with open(os.path.join('dfdc_train_data', 'metadata.json'), 'r') as file:\n",
     "    data1 = json.load(file)\n",
-    "with open('metadata.json' , 'r') as file:\n",
+    "with open('global_metadata.json' , 'r') as file:\n",
     "    data2 = json.load(file)\n",
     "out_file =  open('global_metadata.json' , 'w+')\n",
     "data2.update(data1)\n",
