--- a/helpers/dataset_analysis.ipynb
+++ b/helpers/dataset_analysis.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.12-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -52,7 +52,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "dfdc_train_data    global_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_1  info.txt\n"
+      "dfdc_train_data     global_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_49  info.txt\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,21 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1214\n607 607\n"
+      "1030\n515 515\n"
      ]
     }
    ],
    "source": [
     "# dataset analysis \n",
-    "train_frame_folder = 'dfdc_train_data'\n",
-    "with open( 'global_metadata.json', 'r') as file:\n",
+    "train_frame_folder = 'dfdc_train_part_49'\n",
+    "with open( os.path.join( train_frame_folder, 'metadata.json'), 'r') as file:\n",
     "    data = json.load(file)\n",
     "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
     "\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -125,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "878 878\n"
+      "674 674\n"
      ]
     }
    ],
