--- a/helpers/dataset_analysis.ipynb
+++ b/helpers/dataset_analysis.ipynb
@@ -52,7 +52,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "dfdc_train_data     global_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_49  info.txt\n"
+      "dfdc_train_part_1and48\tglobal_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_49\tinfo.txt\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
