adding some helper code

--- a/helpers/dataset_analysis.ipynb
+++ b/helpers/dataset_analysis.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.12 64-bit ('dfd': conda)",
+   "display_name": "Python 3.6.12 64-bit",
    "metadata": {
     "interpreter": {
      "hash": "363e214a3c0159605df0fe0b534f89f44fb9653db0b43fce25af7d99d1f07e69"
@@ -52,7 +52,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "dfdc_train_part_1and48\tglobal_metadata.json  metadata_audio_altered.csv\ndfdc_train_part_49\tinfo.txt\n"
+      "dfdc_train_part_1and48\tdfdc_train_part_49    info.txt\ndfdc_train_part_2\tglobal_metadata.json  metadata_audio_altered.csv\n"
      ]
     }
    ],
@@ -73,20 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1030\n515 515\n"
+      "460\n230 230\n"
      ]
     }
    ],
    "source": [
     "# dataset analysis \n",
-    "train_frame_folder = 'dfdc_train_part_49'\n",
+    "train_frame_folder = 'dfdc_train_part_2'\n",
     "with open( os.path.join( train_frame_folder, 'metadata.json'), 'r') as file:\n",
     "    data = json.load(file)\n",
     "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -132,7 +132,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "674 674\n"
+      "1174 1174\n"
      ]
     }
    ],
