--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -27,8 +27,7 @@
       "name": "capture_img.ipynb",
       "provenance": [],
       "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -44,37 +43,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oMa-0X9Z-aw_"
+        "id": "oMa-0X9Z-aw_",
+        "outputId": "6235c9ba-63e8-4209-d1e8-73524f6d9f7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L1PcrbAO-9Yg"
+        "id": "L1PcrbAO-9Yg",
+        "outputId": "e0368f6d-f4e2-4337-f633-66bb5562726e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "%cd drive/MyDrive/Deepfake-Detection/\n",
-        "!pwd"
+        "%cd drive/MyDrive/Deepfake-Detection/"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive/Deepfake-Detection\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msiqVBARcXG2"
+        "id": "msiqVBARcXG2",
+        "outputId": "e723fda4-e17a-443c-a994-98063bd96f81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!ls"
+        "!ls -all"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 638815\n",
+            "drwx------ 2 root root      4096 Feb 11 04:53 dataset\n",
+            "-rw------- 1 root root 654109576 Feb 12 05:11 deepfake-detection-model.h5\n",
+            "drwx------ 2 root root      4096 Feb 22 08:56 dfdc_train_part_1and48\n",
+            "drwx------ 2 root root      4096 Feb 22 13:17 dfdc_train_part_2\n",
+            "drwx------ 2 root root      4096 Feb 23 07:06 dfdc_train_part_3\n",
+            "drwx------ 2 root root      4096 Feb 23 11:52 dfdc_train_part_4\n",
+            "drwx------ 2 root root      4096 Feb 27 04:45 dfdc_train_part_46\n",
+            "drwx------ 2 root root      4096 Feb 26 09:11 dfdc_train_part_47\n",
+            "drwx------ 2 root root      4096 Feb 22 10:35 dfdc_train_part_49\n",
+            "drwx------ 2 root root      4096 Feb 12 05:32 test_videos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,35 +140,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH89VnHxvK4z"
+        "id": "dH89VnHxvK4z",
+        "outputId": "181026e0-2d0a-4f43-cce9-efe0d339a68e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "train_frame_folder = 'train_sample_videos'\n",
+        "train_frame_folder = 'dfdc_train_part_2'\n",
         "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
         "    data = json.load(file)\n",
-        "print(data)\n",
         "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
         "detector = dlib.get_frontal_face_detector()\n",
         "print(len(list_of_train_data))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "460\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UOiuvUrKxieZ"
-      },
-      "source": [
-        "from google.colab.patches import cv2_imshow"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QdVd9mRF-Q9m"
+        "id": "QdVd9mRF-Q9m",
+        "outputId": "5871f296-c1c5-4083-cf88-3ca93f3bca8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 931
+        }
       },
       "source": [
         "cnt =0\n",
@@ -132,7 +181,6 @@
         "    count = 0\n",
         "    cap = cv2.VideoCapture(os.path.join(train_frame_folder, vid))\n",
         "    frameRate = cap.get(5)\n",
-        "    print(vid);\n",
         "    while cap.isOpened():\n",
         "        frameId = cap.get(1)\n",
         "        ret, frame = cap.read()\n",
@@ -146,18 +194,77 @@
         "                x2 = d.right()\n",
         "                y2 = d.bottom()\n",
         "                crop_img = frame[y1:y2, x1:x2]\n",
-        "                if data[vid]['label'] == 'REAL':\n",
-        "                    cv2.imwrite('dataset/real/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
-        "                elif data[vid]['label'] == 'FAKE':\n",
-        "                    cv2.imwrite('dataset/fake/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
+        "                try:\n",
+        "                    if data[vid]['label'] == 'REAL':\n",
+        "                        cv2.imwrite('dataset/real/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
+        "                    elif data[vid]['label'] == 'FAKE':\n",
+        "                        cv2.imwrite('dataset/fake/'+vid.split('.')[0]+'_'+str(count)+'.png', cv2.resize(crop_img, (128, 128)))\n",
+        "                except Exception as e:\n",
+        "                    print(cnt, vid)\n",
+        "                    print(e)\n",
         "                count+=1\n",
-        "    cnt += count\n",
-        "    print(count)\n",
-        "\n",
-        "print(cnt)            \n"
+        "    cnt += 1\n",
+        "    if cnt%10 == 0:\n",
+        "        print(cnt)\n",
+        "print(cnt)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "20\n",
+            "30\n",
+            "40\n",
+            "50\n",
+            "60\n",
+            "70\n",
+            "80\n",
+            "90\n",
+            "100\n",
+            "110\n",
+            "120\n",
+            "130\n",
+            "140\n",
+            "150\n",
+            "160\n",
+            "170\n",
+            "180\n",
+            "190\n",
+            "200\n",
+            "210\n",
+            "220\n",
+            "230\n",
+            "240\n",
+            "250\n",
+            "260\n",
+            "270\n",
+            "280\n",
+            "290\n",
+            "300\n",
+            "310\n",
+            "320\n",
+            "330\n",
+            "340\n",
+            "350\n",
+            "360\n",
+            "370\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "error",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-800970b36cf7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mcrop_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0my2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mx2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'REAL'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataset/real/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcrop_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m                 \u001b[0;32melif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'FAKE'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataset/fake/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcrop_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31merror\u001b[0m: OpenCV(4.1.2) /io/opencv/modules/imgproc/src/resize.cpp:3720: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n"
+          ]
+        }
+      ]
     }
   ]
 }
